--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,32 @@ body {
   background-color: #ef4444;
 }
 
+/* styles/globals.css */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  width: 90%;
+  max-width: 500px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
 /* @keyframes backgroundSlide {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
